k8s/apps/manifests/vaultwarden/ingressroute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden-ingress-route
  namespace: vaultwarden
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`vaultwarden.apps.chesurah.net`)
      services:
        - name: vaultwarden
          namespace: vaultwarden
          port: 80
  tls:
    secretName: apps-chesurah-net-prod-tls
